[gd_scene load_steps=10 format=3 uid="uid://drh788ppk1ccw"]

[ext_resource type="Script" path="res://Scripts/MainMenu/OptionsMenuControl.gd" id="1_51qsw"]
[ext_resource type="Texture2D" uid="uid://dn1ely4x28j4u" path="res://Assets/UI/MiniPanel01.jpg" id="2_imycb"]
[ext_resource type="FontFile" uid="uid://j5854hdtucyt" path="res://Assets/Font/Montserrat-VariableFont_wght.ttf" id="2_xh86u"]
[ext_resource type="Texture2D" uid="uid://dq8m8yadhxuss" path="res://Assets/UI/MiniPanel06.jpg" id="3_0at6r"]
[ext_resource type="Texture2D" uid="uid://dfp8glsnvg08h" path="res://Assets/UI/Button01.png" id="4_ewbk1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r4rsb"]
texture = ExtResource("2_imycb")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n17fh"]
texture = ExtResource("3_0at6r")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kb21q"]
texture = ExtResource("3_0at6r")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1fgvl"]
texture = ExtResource("4_ewbk1")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[node name="OptionsMenu" type="VBoxContainer"]
script = ExtResource("1_51qsw")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xh86u")
theme_override_font_sizes/font_size = 20
theme_override_styles/tab_selected = SubResource("StyleBoxTexture_r4rsb")
theme_override_styles/tab_unselected = SubResource("StyleBoxTexture_n17fh")
theme_override_styles/panel = SubResource("StyleBoxTexture_kb21q")
clip_tabs = false
all_tabs_in_front = true

[node name="Audio" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Columns" type="HBoxContainer" parent="TabContainer/Audio"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Left" type="VBoxContainer" parent="TabContainer/Audio/Columns"]
layout_mode = 2

[node name="Master" type="Label" parent="TabContainer/Audio/Columns/Left"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_xh86u")
text = "Volume general"

[node name="Music" type="Label" parent="TabContainer/Audio/Columns/Left"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_xh86u")
text = "Musique"

[node name="SFX" type="Label" parent="TabContainer/Audio/Columns/Left"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_xh86u")
text = "Effets sonores"

[node name="Right" type="VBoxContainer" parent="TabContainer/Audio/Columns"]
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="TabContainer/Audio/Columns/Right"]
layout_mode = 2

[node name="MasterVolumeSlider" type="HSlider" parent="TabContainer/Audio/Columns/Right/MasterVolume"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="MasterVolumeLineEdit" type="SpinBox" parent="TabContainer/Audio/Columns/Right/MasterVolume"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
update_on_text_changed = true

[node name="MusicVolume" type="HBoxContainer" parent="TabContainer/Audio/Columns/Right"]
layout_mode = 2

[node name="MusicVolumeSlider" type="HSlider" parent="TabContainer/Audio/Columns/Right/MusicVolume"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolumeLineEdit" type="SpinBox" parent="TabContainer/Audio/Columns/Right/MusicVolume"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
update_on_text_changed = true

[node name="SFXVolume" type="HBoxContainer" parent="TabContainer/Audio/Columns/Right"]
layout_mode = 2

[node name="SFXVolumeSlider" type="HSlider" parent="TabContainer/Audio/Columns/Right/SFXVolume"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXVolumeLineEdit" type="SpinBox" parent="TabContainer/Audio/Columns/Right/SFXVolume"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
update_on_text_changed = true

[node name="Video" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Columns" type="HBoxContainer" parent="TabContainer/Video"]
layout_mode = 2

[node name="Left" type="VBoxContainer" parent="TabContainer/Video/Columns"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Video/Columns/Left"]
layout_mode = 2
size_flags_vertical = 6
text = "Resolution"

[node name="Right" type="VBoxContainer" parent="TabContainer/Video/Columns"]
layout_mode = 2

[node name="ResolutionOption" type="OptionButton" parent="TabContainer/Video/Columns/Right"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
item_count = 7
allow_reselect = true
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "3840x2160"
popup/item_1/id = 1
popup/item_2/text = "2560x1440"
popup/item_2/id = 2
popup/item_3/text = "1600x900"
popup/item_3/id = 3
popup/item_4/text = "1280x720"
popup/item_4/id = 4
popup/item_5/text = "1152x648"
popup/item_5/id = 5
popup/item_6/text = "1024x576"
popup/item_6/id = 6

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Back" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xh86u")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_1fgvl")
text = "Retour"

[connection signal="value_changed" from="TabContainer/Audio/Columns/Right/MasterVolume/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/Columns/Right/MasterVolume/MasterVolumeLineEdit" to="." method="_on_master_volume_line_edit_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/Columns/Right/MusicVolume/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/Columns/Right/MusicVolume/MusicVolumeLineEdit" to="." method="_on_music_volume_line_edit_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/Columns/Right/SFXVolume/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/Columns/Right/SFXVolume/SFXVolumeLineEdit" to="." method="_on_sfx_volume_line_edit_value_changed"]
[connection signal="item_selected" from="TabContainer/Video/Columns/Right/ResolutionOption" to="." method="_on_resolution_option_item_selected"]
[connection signal="pressed" from="HBoxContainer/Back" to="." method="_on_back_pressed"]
